--- a/index.html
+++ b/index.html
@@ -99,26 +99,28 @@
 <h2 class="pt-3 ps-4">Order Generation</h2>
         <div class="row">
           <div class="col-sm-6">
-            <hr class="border-4 opacity-100 ms-3" />
+            <hr class="border-4 opacity-100 ms-3 pb-2" />
           </div>
         </div>
             <div class="steps">
         <div class="row  mb-3">
           <div class="col-md-4 num" align="center">
             <img src="/images/3-1.png" class="img-fluid d-block number " alt="1" />
-           <h3 class="step step1 d-inline-flex">Coins selection</h3>
-           <p>First, 65 coins are given to the coin selection model in terms of the largest market size. Every 12 hours, the model selects suitable candidate coins for trading in the next 12 hours based on their recent movement/trend and volatility.</p>
+           <div class="border border-light p-3"><h3 class="step step1 d-inline-flex">Coins selection</h3>
+           <p >First, 65 coins are given to the coin selection model in terms of the largest market size. Every 12 hours, the model selects suitable candidate coins for trading in the next 12 hours based on their recent movement/trend and volatility.</p>
+           </div>
           </div>
 
           <div class="col-md-4  num " align="center">
         <img src="/images/3-2.png" alt="1" class="img-fluid d-block number" />
-            <h3 class="step step2 d-inline-flex">Open a position</h3>
-            <p>To generate an order on the selected coins, the AI model checks the past state of the coin and the market situation. If the coin momentum triggers the threshold of the risk to return, the order is sent to the order opening section.</p>
+           <div class="border border-light p-3"> <h3 class="step step2 d-inline-flex">Open a position</h3>
+            <p >To generate an order on the selected coins, the AI model checks the past state of the coin and the market situation. If the coin momentum triggers the threshold of the risk to return, the order is sent to the order opening section.</p>
+            </div>
           </div>
           <div class="col-md-4 num" align="center">
             <img src="/images/3-3.png" class="img-fluid d-block number" alt="1" />
           
-            <img src="/images/3.png" class="img-fluid d-block stepIcon stepIcon3" alt="1" />
+            <p class="border border-light pt-5  ps-3 pe-3 mb-0 al">Every <span class="makebig">1 hour</span> <br> , the model checks more than 500 parameters on the selected coins and decides whether to enter the market or not. According to the state of the coin, the appropriate entry point to open the position is determined.</p>
           </div>
          
         </div>
