--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       </div>
       <div class="secondpage pt-3">
         <h2 class="pt-5 ps-4">Pipeline</h2>
-        <div class="row">
-          <div class="col-sm-6">
-            <hr class="border-4 opacity-100 ms-3 pb-2" />
-          </div>
-        </div>
+               <hr
+          class="border-4 opacity-100 ms-3 d-none d-md-block"
+          style="width: 35%"
+        />
+        <hr class="border-4 opacity-100 ms-3 d-md-none" style="width: 70%" />
         <p class="ms-3">
           The MAHDA crypto pipeline is implemented in four steps. Each of these
           steps uses its own unique technology.
