--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             height="400px"
           />
           <h3 class="pt-3 text-center">Nima Hemmaty</h3 class="p-3 text-center">
-            <p>Co-Founder & CEO</p>
+            <p><a href="https://www.linkedin.com/in/nimahemmati" target="_blank"><i class="fa-brands fa-linkedin"></i></a> Co-Founder & CEO</p>
         </div>
         <div class="col-md-3">
           <img
@@ -68,17 +68,17 @@
             height="400px"
           />
           <h3 class="pt-3 text-center">Azadeh Fazlolahi</h3 class="p-3 text-center">
-            <p>Co-Founder & PM</p>
+            <p><a href="https://www.linkedin.com/in/azadehfazlolahi" target="_blank"><i class="fa-brands fa-linkedin" ></i></a> Co-Founder & PM</p>
         </div>
         <div class="col-md-3">
           <img src="/images/ahmad.jpeg" alt="team member" class=" img-fluid center d-block" />
           <h3 class="pt-3 text-center">Amirahmad Ziaeepour</h3 class="p-3 text-center">
-            <p>Co-Founder & CTO</p>
+            <p><a href="https://www.linkedin.com/in/amirahmad-ziaeepour" target="_blank"><i class="fa-brands fa-linkedin"></i></a> Co-Founder & CTO</p>
         </div>
         <div class="col-md-3">
           <img src="/images/shayan.jpeg" alt="team member" class=" img-fluid center d-block" />
           <h3 class="pt-3 text-center">Shayan Sadeghi</h3 class="p-3 text-center">
-            <p>Developer</p>
+            <p><a href="https://www.linkedin.com/in/shayan-sadeghi-3b556b205" target="_blank"><i class="fa-brands fa-linkedin"></i></a> Developer</p>
         </div>
       </div>
     </div>
