--- a/index.html
+++ b/index.html
@@ -32,9 +32,37 @@
     <title>Mahda</title>
   </head>
   <body>
+<nav class="navbar navbar-expand-sm navbar-dark px-2 fixed-top">
+    <div class="container-fluid justify-content-center">
+      <div
+        class="collapse navbar-collapse justify-content-center"
+        id="navbarNav"
+      >
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/"
+              ><img src="/images/logom.png" alt="" class="navLogo"
+            /></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="/factsheet.html">Factsheet</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <div class="container-fluid">
       <!-- https://storied-semolina-2a8e4e.netlify.app -->
-      <div class="row firstpage mt-5 nopad">
+      <div class="row firstpage nopad pt-5">
         <div class="col-sm-6">
           <h1 class="mt-sm-5 ms-3 pt-md-5 fw-bolder">MAHDA</h1>
           <h2 class="ms-3 text-center text-start">Trust AI in trading!</h2>
@@ -44,7 +72,7 @@
             learning algorithms and taking into account different risk
             measurements makes MAHDA fund a powerful fully automated hedge fund.
           </p>
-          <a href="#" class="btn btn-primary">Contact us</a>
+          <a href="/contact.html" class="btn btn-primary">Contact us</a>
         </div>
         <div class="col-sm-6 nopad">
           <img
@@ -475,7 +503,7 @@
 
       <div class="sixPage" id="3">
        
-        <h2 class="pt-3 ps-4">Order Execution</h2>
+        <h2 class="pt-5 ps-4">Order Execution</h2>
         <hr
           class="border-4 opacity-100 ms-3 d-none d-md-block"
           style="width: 35%"
