--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,34 @@
     <title>Mahda</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-sm navbar-dark px-2 fixed-top">
+      <div class="container-fluid justify-content-center">
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/"
+                ><img src="/images/logom.png" alt="" class="navLogo"
+              /></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/factsheet.html">Factsheet</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="about contact text-center">
       <h1 class="ps-2 pt-5">CONTACT US</h1>
       <div class="con text-center p-3">
