--- a/factsheet.html
+++ b/factsheet.html
@@ -33,9 +33,37 @@
   </head>
 </html>
 <body>
+  <nav class="navbar navbar-expand-sm navbar-dark px-2 fixed-top">
+    <div class="container-fluid justify-content-center">
+      <div
+        class="collapse navbar-collapse justify-content-center"
+        id="navbarNav"
+      >
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/"
+              ><img src="/images/logom.png" alt="" class="navLogo"
+            /></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/factsheet.html">Factsheet</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="fact">
     <div class="mf">
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-10 pe-0 mf1 py-md-4">
           <h1 class="pt-2">Mahda fact sheet</h1>
           <h3>January 2023</h3>
@@ -47,7 +75,7 @@
             class="img-fluid pt-3"
           />
         </div>
-      </div>
+      </div> -->
 
       <hr class="border-4 opacity-100 m-0 devider" />
     </div>
