--- a/about.html
+++ b/about.html
@@ -33,27 +33,45 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark px-2 fixed-top">
-    <div class="container-fluid justify-content-center">
+    <div class="container-fluid ">
+          <a class="navbar-brand" href="/">
+        <img src="/images/logom.png" alt="" class="navLogo d-block d-sm-none"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div
-        class="collapse navbar-collapse justify-content-center"
+        class="collapse navbar-collapse "
         id="navbarNav"
       >
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/"
-              ><img src="/images/logom.png" alt="" class="navLogo"
+              ><img src="/images/logom.png" alt="" class="navLogo d-block d-sm-none"
             /></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pe-5">
             <a class="nav-link" aria-current="page" href="/">Home</a>
           </li>
-          <li class="nav-item">
+              <li class="nav-item pe-5">
+            <a class="nav-link " aria-current="page" href="../#pip"> 
+Pipeline</a>
+          </li>
+          <li class="nav-item pe-5">
             <a class="nav-link " href="/factsheet.html">Factsheet</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pe-5">
             <a class="nav-link active" href="/about.html">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pe-5">
             <a class="nav-link" href="/contact.html">Contact</a>
           </li>
         </ul>
