--- a/contact.html
+++ b/contact.html
@@ -33,34 +33,53 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark px-2 fixed-top">
-      <div class="container-fluid justify-content-center">
-        <div
-          class="collapse navbar-collapse justify-content-center"
-          id="navbarNav"
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+          <img src="/images/logom.png" alt="" class="navLogo d-block d-sm-none"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/"
-                ><img src="/images/logom.png" alt="" class="navLogo"
+                ><img
+                  src="/images/logom.png"
+                  alt=""
+                  class="navLogo d-block d-sm-none"
               /></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item pe-5">
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item pe-5">
+              <a class="nav-link" aria-current="page" href="../#pip">
+                Pipeline</a
+              >
+            </li>
+            <li class="nav-item pe-5">
               <a class="nav-link" href="/factsheet.html">Factsheet</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item pe-5">
               <a class="nav-link" href="/about.html">About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item pe-5">
               <a class="nav-link active" href="/contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="about contact text-center">
+    <div class="about contact text-center pt-5">
       <h1 class="ps-2 pt-5">CONTACT US</h1>
       <div class="con text-center p-3">
         SEND US AN EMAIL, WE ENDEAVOUR <br />
