--- a/index.html
+++ b/index.html
@@ -33,27 +33,45 @@
   </head>
   <body>
 <nav class="navbar navbar-expand-sm navbar-dark px-2 fixed-top">
-    <div class="container-fluid justify-content-center">
+    <div class="container-fluid ">
+          <a class="navbar-brand" href="/">
+        <img src="/images/logom.png" alt="" class="navLogo d-block d-sm-none"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div
-        class="collapse navbar-collapse justify-content-center"
+        class="collapse navbar-collapse "
         id="navbarNav"
       >
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/"
-              ><img src="/images/logom.png" alt="" class="navLogo"
+              ><img src="/images/logom.png" alt="" class="navLogo "
             /></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pe-5">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link " href="/factsheet.html">Factsheet</a>
+           <li class="nav-item pe-5">
+            <a class="nav-link " aria-current="page" href="/#pip"> 
+Pipeline</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pe-5">
+            <a class="nav-link " href="/factsheet.html">Fact Sheet</a>
+          </li>
+          <li class="nav-item pe-5">
             <a class="nav-link" href="/about.html">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pe-5">
             <a class="nav-link" href="/contact.html">Contact</a>
           </li>
         </ul>
@@ -84,7 +102,7 @@
           />
         </div>
       </div>
-      <div class="secondpage pt-3">
+      <div class="secondpage pt-3 " id="pip">
         <h2 class="pt-5 ps-4">Pipeline</h2>
                <hr
           class="border-4 opacity-100 ms-3 d-none d-md-block"
@@ -105,9 +123,9 @@
                 alt="1"
               />
               <a href="#1" class="btn"
-                ><h3 class="stepsec step1 d-inline-flex">
+                ><div class="stepsec step1 d-inline-flex">
                   Order Generation
-                </h3></a
+                </div></a
               >
               <img
                 src="/images/1.png"
