--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 ><img
                   src="/images/logom.png"
                   alt=""
-                  class="navLogo d-block d-sm-none"
+                  class="navLogo d-none d-sm-block"
               /></a>
             </li>
             <li class="nav-item pe-5">
