--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/"
-              ><img src="/images/logom.png" alt="" class="navLogo d-block d-sm-none"
+              ><img src="/images/logom.png" alt="" class="navLogo d-none d-sm-block"
             /></a>
           </li>
           <li class="nav-item pe-5">
@@ -128,5 +128,11 @@ Pipeline</a>
         </div>
       </div>
     </div>
+     <footer class="pt-4">
+      <div class="fot1 text-center">→ Are you ready to invest? </div><div class="text-center mb-3"> Feel free to contact us and we will get back to you as soon as possible.</div>
+       <div class="text-center "><a href="mailto:info@mahda.io">info@mahda.io</a></div> 
+      <div class="social text-center d-flex pb-3 "> <div> <a href=""><i class="soc1 fa-brands fa-linkedin"></i></a> </div> <div> <a href=""><i class=" soc2 fa-brands fa-instagram"></i></a></div></div> 
+      <div class=" foottext text-start ps-3">Copyright 2023. All rights reserved.</div>
+      </footer>
   </body>
 </html>
