--- a/factsheet.html
+++ b/factsheet.html
@@ -56,7 +56,7 @@
               ><img
                 src="/images/logom.png"
                 alt=""
-                class="d-none d-md-block navLogo"
+                class="d-none d-sm-block navLogo"
             /></a>
           </li>
           <li class="nav-item pe-5">
@@ -158,4 +158,24 @@
 
     <p class="px-5 pb-3">* All results period: Jan 30, 2020, to Jan 30, 2023</p>
   </div>
+  <footer class="pt-4">
+    <div class="fot1 text-center">→ Are you ready to invest?</div>
+    <div class="text-center mb-3">
+      Feel free to contact us and we will get back to you as soon as possible.
+    </div>
+    <div class="text-center">
+      <a href="mailto:info@mahda.io">info@mahda.io</a>
+    </div>
+    <div class="social text-center d-flex pb-3">
+      <div>
+        <a href=""><i class="soc1 fa-brands fa-linkedin"></i></a>
+      </div>
+      <div>
+        <a href=""><i class="soc2 fa-brands fa-instagram"></i></a>
+      </div>
+    </div>
+    <div class="foottext text-start ps-3">
+      Copyright 2023. All rights reserved.
+    </div>
+  </footer>
 </body>
