--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/"
-              ><img src="/images/logom.png" alt="" class="navLogo "
+              ><img src="/images/logom.png" alt="" class="d-none d-sm-block navLogo "
             /></a>
           </li>
           <li class="nav-item pe-5">
@@ -123,9 +123,9 @@ Pipeline</a>
                 alt="1"
               />
               <a href="#1" class="btn"
-                ><div class="stepsec step1 d-inline-flex">
+                ><h3 class="stepsec step1 d-inline-flex">
                   Order Generation
-                </div></a
+                </h3></a
               >
               <img
                 src="/images/1.png"
@@ -135,7 +135,7 @@ Pipeline</a>
             </div>
             <div class="col-sm-3 num" align="center">
               <img
-                src="/images/number-3.png"
+                src="/images/number-2.png"
                 class="img-fluid d-block number"
                 alt="1"
               />
@@ -151,7 +151,7 @@ Pipeline</a>
 
             <div class="col-sm-3 num" align="center">
               <img
-                src="/images/number-2.png"
+                src="/images/number-3.png"
                 alt="1"
                 class="img-fluid d-block number"
               />
@@ -586,7 +586,14 @@ Stop Loss  </h2></div>
           </div>
         </div>
       </div>
+      
     </div>
+    <footer class="pt-4">
+      <div class="fot1 text-center">→ Are you ready to invest? </div><div class="text-center mb-3"> Feel free to contact us and we will get back to you as soon as possible.</div>
+       <div class="text-center "><a href="mailto:info@mahda.io">info@mahda.io</a></div> 
+      <div class="social text-center d-flex pb-3 "> <div> <a href=""><i class="soc1 fa-brands fa-linkedin"></i></a> </div> <div> <a href=""><i class=" soc2 fa-brands fa-instagram"></i></a></div></div> 
+      <div class=" foottext text-start ps-3">Copyright 2023. All rights reserved.</div>
+      </footer>
   </body>
 </html>
 <!-- grid-template-columns: repeat(3, 1fr); -->
