--- a/about.html
+++ b/about.html
@@ -27,15 +27,20 @@
       src="https://kit.fontawesome.com/0117d383ac.js"
       crossorigin="anonymous"
     ></script>
+    <meta name="description" content="We are a hedge fund specialized in digital assets which aims to mitigate risk and provide sustainable returns over time.">
     <link rel="stylesheet" href="/style.css" />
 
-    <title>Mahda</title>
+    <title>Mahda| Team</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark px-2 fixed-top">
-    <div class="container-fluid ">
-          <a class="navbar-brand" href="/">
-        <img src="/images/logom.png" alt="" class="navLogo d-block d-sm-none"
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/" title="homepage">
+        <img
+          src="/images/logom.png"
+          alt="Mahda's logo"
+          title="Mahda's logo"
+          class="navLogo d-block d-sm-none"
       /></a>
       <button
         class="navbar-toggler"
@@ -48,31 +53,42 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div
-        class="collapse navbar-collapse "
-        id="navbarNav"
-      >
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/"
-              ><img src="/images/logom.png" alt="" class="navLogo d-none d-sm-block"
+            <a class="nav-link" aria-current="page" href="/" title="homepage"
+              ><img
+                src="/images/logom.png"
+                alt="Mahda's logo"
+                title="Mahda's logo"
+                class="d-none d-sm-block navLogo"
             /></a>
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-          </li>
-              <li class="nav-item pe-5">
-            <a class="nav-link " aria-current="page" href="../#pip"> 
-Pipeline</a>
+            <a class="nav-link" aria-current="page" href="/" title="homepage"
+              >Home</a
+            >
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link " href="/factsheet.html">Factsheet</a>
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="../#pip"
+              title="pipline"
+            >
+              Pipeline</a
+            >
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link active" href="/about.html">About</a>
+            <a class="nav-link " href="/factsheet.html" title="factsheet"
+              >Factsheet</a
+            >
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link active" href="/about.html" title="about">About</a>
+          </li>
+          <li class="nav-item pe-5">
+            <a class="nav-link" href="/contact.html" title="contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -103,7 +119,7 @@ Pipeline</a>
             height="400px"
           />
           <h3 class="pt-3 text-center">Nima Hemmaty</h3 class="p-3 text-center">
-            <p><a href="https://www.linkedin.com/in/nimahemmati" target="_blank"><i class="fa-brands fa-linkedin"></i></a> Co-Founder & CEO</p>
+            <p><a href="https://www.linkedin.com/in/nimahemmati" target="_blank" title="CEO linkedin"><i class="fa-brands fa-linkedin"></i></a> Co-Founder & CEO</p>
         </div>
         <div class="col-md-3">
           <img
@@ -114,12 +130,12 @@ Pipeline</a>
             height="400px"
           />
           <h3 class="pt-3 text-center">Azadeh Fazlolahi</h3 class="p-3 text-center">
-            <p><a href="https://www.linkedin.com/in/azadehfazlolahi" target="_blank"><i class="fa-brands fa-linkedin" ></i></a> Co-Founder & PM</p>
+            <p><a href="https://www.linkedin.com/in/azadehfazlolahi" target="_blank" title="CPO linkedin"><i class="fa-brands fa-linkedin" ></i></a> Co-Founder & PM</p>
         </div>
         <div class="col-md-3">
           <img src="/images/ahmad.jpeg" alt="team member" class=" img-fluid center d-block" />
           <h3 class="pt-3 text-center">Amirahmad Ziaeepour</h3 class="p-3 text-center">
-            <p><a href="https://www.linkedin.com/in/amirahmad-ziaeepour" target="_blank"><i class="fa-brands fa-linkedin"></i></a> Co-Founder & CTO</p>
+            <p><a href="https://www.linkedin.com/in/amirahmad-ziaeepour" target="_blank" title="CTO linkedin"><i class="fa-brands fa-linkedin"></i></a> Co-Founder & CTO</p>
         </div>
         <div class="col-md-3">
           <img src="/images/shayan.jpeg" alt="team member" class=" img-fluid center d-block" />
@@ -128,11 +144,31 @@ Pipeline</a>
         </div>
       </div>
     </div>
-     <footer class="pt-4">
-      <div class="fot1 text-center">→ Are you ready to invest? </div><div class="text-center mb-3"> Feel free to contact us and we will get back to you as soon as possible.</div>
-       <div class="text-center "><a href="mailto:info@mahda.io">info@mahda.io</a></div> 
-      <div class="social text-center d-flex pb-3 "> <div> <a href=""><i class="soc1 fa-brands fa-linkedin"></i></a> </div> <div> <a href=""><i class=" soc2 fa-brands fa-instagram"></i></a></div></div> 
-      <div class=" foottext text-start ps-3">Copyright 2023. All rights reserved.</div>
-      </footer>
+    <footer class="pt-4">
+    <div class="fot1 text-center">→ Are you ready to invest?</div>
+    <div class="text-center mb-3 mx-3">
+      Feel free to contact us and we will get back to you as soon as possible.
+    </div>
+    <div class="text-center">
+      <a href="mailto:info@mahda.io" title="email to Mahda" target="_blank">info@mahda.io</a>
+    </div>
+    <div class="social text-center d-flex pb-3">
+      <div>
+        <a
+          href="https://www.linkedin.com/company/mahdaio"
+          title="Mahda's linkedin" target="_blank"
+          ><i class="soc1 fa-brands fa-linkedin"></i
+        ></a>
+      </div>
+      <div>
+        <a href="https://www.instagram.com/mahdaio/" title="Mahda's instagram"
+          ><i class="soc2 fa-brands fa-instagram"></i
+        ></a>
+      </div>
+    </div>
+    <div class="foottext text-start ps-3">
+      Copyright 2023. All rights reserved.
+    </div>
+  </footer>
   </body>
 </html>
