--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,12 @@
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark px-2 fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-          <img src="/images/logom.png" alt="" class="navLogo d-block d-sm-none"
+        <a class="navbar-brand" href="/" title="homepage">
+          <img
+            src="/images/logom.png"
+            alt="Mahda's logo"
+            title="Mahda's logo"
+            class="navLogo d-block d-sm-none"
         /></a>
         <button
           class="navbar-toggler"
@@ -51,29 +55,41 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/"
+              <a class="nav-link" aria-current="page" href="/" title="homepage"
                 ><img
                   src="/images/logom.png"
-                  alt=""
-                  class="navLogo d-none d-sm-block"
+                  alt="Mahda's logo"
+                  title="Mahda's logo"
+                  class="d-none d-sm-block navLogo"
               /></a>
             </li>
             <li class="nav-item pe-5">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/" title="homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item pe-5">
-              <a class="nav-link" aria-current="page" href="../#pip">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="../#pip"
+                title="pipline"
+              >
                 Pipeline</a
               >
             </li>
             <li class="nav-item pe-5">
-              <a class="nav-link" href="/factsheet.html">Factsheet</a>
+              <a class="nav-link" href="/factsheet.html" title="factsheet"
+                >Factsheet</a
+              >
             </li>
             <li class="nav-item pe-5">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="about">About</a>
             </li>
             <li class="nav-item pe-5">
-              <a class="nav-link active" href="/contact.html">Contact</a>
+              <a class="nav-link active" href="/contact.html" title="contact"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -89,10 +105,22 @@
       </div>
       <div class="fir pt-4">
         <i class="fa-solid fa-square-envelope fa-3x i1"></i>
-        <a href="mailto:info@mahda.io" class="pt-4"> &nbsp info@mahda.io</a>
+        <a
+          href="mailto:info@mahda.io"
+          class="pt-4"
+          title="email to Mahda"
+          target="_blank"
+        >
+          &nbsp info@mahda.io</a
+        >
       </div>
       <i class="fa-brands fa-linkedin fa-3x i1 i2"></i>
-      <a href="https://www.linkedin.com/company/mahdaio" class="pt-4">
+      <a
+        href="https://www.linkedin.com/company/mahdaio"
+        class="pt-4"
+        title="Go to mahda linkedin"
+        target="_blank"
+      >
         &nbsp LinkedIn &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
       </a>
     </div>
