--- a/factsheet.html
+++ b/factsheet.html
@@ -27,16 +27,24 @@
       src="https://kit.fontawesome.com/0117d383ac.js"
       crossorigin="anonymous"
     ></script>
+    <meta
+      name="description"
+      content="Mahda's return vs bitcoin show in this page."
+    />
     <link rel="stylesheet" href="/style.css" />
 
-    <title>Mahda</title>
+    <title>Mahda's Factsheet|Performance Overview</title>
   </head>
 </html>
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark px-2 fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        <img src="/images/logom.png" alt="" class="navLogo d-block d-sm-none"
+      <a class="navbar-brand" href="/" title="homepage">
+        <img
+          src="/images/logom.png"
+          alt="Mahda's logo"
+          title="Mahda's logo"
+          class="navLogo d-block d-sm-none"
       /></a>
       <button
         class="navbar-toggler"
@@ -52,49 +60,50 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/"
+            <a class="nav-link" aria-current="page" href="/" title="homepage"
               ><img
                 src="/images/logom.png"
-                alt=""
+                alt="Mahda's logo"
+                title="Mahda's logo"
                 class="d-none d-sm-block navLogo"
             /></a>
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link" aria-current="page" href="/" title="homepage"
+              >Home</a
+            >
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link" aria-current="page" href="../#pip"> Pipeline</a>
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="../#pip"
+              title="pipline"
+            >
+              Pipeline</a
+            >
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link active" href="/factsheet.html">Factsheet</a>
+            <a class="nav-link active" href="/factsheet.html" title="factsheet"
+              >Factsheet</a
+            >
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/about.html" title="about">About</a>
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/contact.html" title="contact">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="fact">
+  <div class="fact tp-5 mt-5">
     <div class="mf">
-      <!-- <div class="row">
-        <div class="col-10 pe-0 mf1 py-md-4">
-          <h1 class="pt-2">Mahda fact sheet</h1>
-          <h3>January 2023</h3>
-        </div>
-        <div class="col-2 logo">
-          <img
-            src="/images/logo.jpeg"
-            alt="mahda's logo "
-            class="img-fluid pt-3"
-          />
-        </div>
-      </div> -->
-
-      <hr class="border-4 opacity-100 m-0 devider" />
+      <div class="pe-0 mf1 py-md-4 text-center pb-3">
+        <h1 class="pt-2">Mahda fact sheet</h1>
+        <h3>January 2023</h3>
+      </div>
     </div>
 
     <div class="row px-5 pt-2 py-md-5">
@@ -112,7 +121,12 @@
       </div>
       <div class="col-sm-6 px-4 py-3 py-md-5">
         <h2 class="ps-2">Performance Overview</h2>
-        <img src="/images/f11.png" alt="performanc" class="img-fluid" />
+        <img
+          src="/images/f11.png"
+          alt="Performance Overview"
+          title="Mahda's Performance Overview"
+          class="img-fluid"
+        />
       </div>
     </div>
     <div class="row px-5 py-3 py-md-5">
@@ -131,19 +145,26 @@
       </div>
       <div class="col-sm-6 px-4">
         <h2 class="ps-2 pt-2">cumulative return</h2>
-        <img src="/images/f12.png" alt="performanc" class="img-fluid py-sm-3" />
+        <img
+          src="/images/f12.png"
+          alt="cumulative return"
+          title="cumulative return"
+          class="img-fluid py-sm-3"
+        />
       </div>
     </div>
 
     <h2 class="text-center pt-4 p-md-5">Monthly and cumulative return</h2>
     <img
       src="/images/f13.png"
-      alt="performanc"
+      alt="Monthly and cumulative return"
+      title="Mahda's Monthly and cumulative return"
       class="img-fluid d-block pb-md-5 px-5"
     />
     <img
       src="/images/f14.png"
-      alt="performanc"
+      alt="Monthly and cumulative return"
+      title="Mahda's Monthly and cumulative return"
       class="img-fluid d-block px-5 py-4 py-md-5"
     />
     <hr />
@@ -160,18 +181,27 @@
   </div>
   <footer class="pt-4">
     <div class="fot1 text-center">→ Are you ready to invest?</div>
-    <div class="text-center mb-3">
+    <div class="text-center mb-3 mx-3">
       Feel free to contact us and we will get back to you as soon as possible.
     </div>
     <div class="text-center">
-      <a href="mailto:info@mahda.io">info@mahda.io</a>
+      <a href="mailto:info@mahda.io" title="email to Mahda" target="_blank"
+        >info@mahda.io</a
+      >
     </div>
     <div class="social text-center d-flex pb-3">
       <div>
-        <a href=""><i class="soc1 fa-brands fa-linkedin"></i></a>
+        <a
+          href="https://www.linkedin.com/company/mahdaio"
+          title=" Go to Mahda's linkedin"
+          target="_blank"
+          ><i class="soc1 fa-brands fa-linkedin"></i
+        ></a>
       </div>
       <div>
-        <a href=""><i class="soc2 fa-brands fa-instagram"></i></a>
+        <a href="https://www.instagram.com/mahdaio/" title="Mahda's instagram"
+          ><i class="soc2 fa-brands fa-instagram"></i
+        ></a>
       </div>
     </div>
     <div class="foottext text-start ps-3">
