--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
     ></script>
     <link rel="stylesheet" href="/style.css" />
 
-    <title>Mahda</title>
+    <title>cryptocurrency hedge fund | Mahda</title>
+    <meta name="description" content="Mahda focuses on capturing superior risk-adjusted returns through leading cryptocurrencies with artificial intelligence. ">
   </head>
   <body>
 <nav class="navbar navbar-expand-sm navbar-dark px-2 fixed-top">
     <div class="container-fluid ">
           <a class="navbar-brand" href="/">
-        <img src="/images/logom.png" alt="" class="navLogo d-block d-sm-none"
+        <img src="/images/logom.png" alt="Mahda's logo" title="Mahda's logo" class="navLogo d-block d-sm-none"
       /></a>
       <button
         class="navbar-toggler"
@@ -54,25 +55,25 @@
       >
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/"
-              ><img src="/images/logom.png" alt="" class="d-none d-sm-block navLogo "
+            <a class="nav-link" aria-current="page" href="/" title="Mahda homepage"
+              ><img src="/images/logom.png" alt="Mahda's logo" title="Mahda's logo" class="d-none d-sm-block navLogo "
             /></a>
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/" title="Mahda homepage">Home</a>
           </li>
            <li class="nav-item pe-5">
-            <a class="nav-link " aria-current="page" href="/#pip"> 
+            <a class="nav-link " aria-current="page" href="/#pip" title="Mahda Pipline"> 
 Pipeline</a>
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link " href="/factsheet.html">Fact Sheet</a>
+            <a class="nav-link " href="/factsheet.html" title="Mahda factsheet">Fact Sheet</a>
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/about.html" title="about Mahda">About</a>
           </li>
           <li class="nav-item pe-5">
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/contact.html" title="Contact us">Contact</a>
           </li>
         </ul>
       </div>
@@ -90,12 +91,13 @@ Pipeline</a>
             learning algorithms and taking into account different risk
             measurements makes MAHDA fund a powerful fully automated hedge fund.
           </p>
-          <a href="/contact.html" class="btn btn-primary">Contact us</a>
+          <a href="/contact.html" class="btn btn-primary" title="contact us">Contact us</a>
         </div>
         <div class="col-sm-6 nopad">
           <img
             src="/images/firstpage.jpg"
             alt="bridge photo "
+            title="bridge photo "
             width="400px"
             max-width="100%"
             class="img-fluid rounded blueimg mt-5"
@@ -120,9 +122,10 @@ Pipeline</a>
               <img
                 src="/images/number-1.png"
                 class="img-fluid d-block number"
-                alt="1"
+                alt=" number1"
+                  title="number 1"
               />
-              <a href="#1" class="btn"
+              <a href="#1" class="btn" title="Mahda Order Generation"
                 ><h3 class="stepsec step1 d-inline-flex">
                   Order Generation
                 </h3></a
@@ -130,37 +133,42 @@ Pipeline</a>
               <img
                 src="/images/1.png"
                 class="img-fluid d-block stepIcon stepIcon1"
-                alt="1"
+                alt="order generation"
+                 title="order generation"
               />
             </div>
             <div class="col-sm-3 num" align="center">
               <img
                 src="/images/number-2.png"
                 class="img-fluid d-block number"
-                alt="1"
+                alt=" number 2"
+                  title="number 2"
               />
-              <a href="#2" class="btn">
+              <a href="#2" class="btn" title="Mahda Bet Sizing">
                 <h3 class="stepsec step3 d-inline-flex">Bet Sizing</h3></a
               >
               <img
                 src="/images/3.png"
                 class="img-fluid d-block stepIcon stepIcon3"
-                alt="1"
+                alt="Bet Sizing"
+                 title="Bet Sizing"
               />
             </div>
 
             <div class="col-sm-3 num" align="center">
               <img
                 src="/images/number-3.png"
-                alt="1"
+                 alt=" number 3"
+                  title="number 3"
                 class="img-fluid d-block number"
               />
-              <a href="#3" class="btn">
+              <a href="#3" class="btn" title="Mahda Order Execution" >
                 <h3 class="stepsec step2 d-inline-flex">Order Execution</h3></a
               >
               <img
                 src="/images/2.png"
-                alt="1"
+                alt="Order Execution"
+                 title="Order Execution"
                 class="img-fluid d-block stepIcon stepIcon2"
               />
             </div>
@@ -169,15 +177,17 @@ Pipeline</a>
               <img
                 src="/images/number-4.png"
                 class="img-fluid d-block number"
-                alt="1"
+                 alt=" number 4"
+                  title="number 4"
               />
-              <a href="#4" class="btn"
+              <a href="#4" class="btn" title="Mahda Exit Strategy"
                 ><h3 class="stepsec step4 d-inline-flex">Exit Strategy</h3></a
               >
               <img
                 src="/images/4.png"
                 class="img-fluid d-block stepIcon stepIcon4"
-                alt="1"
+                 alt="Exit Strategy"
+                 title="Exit Strategy"
               />
             </div>
           </div>
@@ -196,7 +206,8 @@ Pipeline</a>
               <img
                 src="/images/3-1.png"
                 class="img-fluid d-block number"
-                alt="1"
+                alt="Coins selection"
+                 title="Coins selection"
               />
               <div class="border border-light p-3">
                 <h3 class="step step1 d-inline-flex">Coins selection</h3>
@@ -212,7 +223,8 @@ Pipeline</a>
             <div class="col-md-4 num" align="center">
               <img
                 src="/images/3-2.png"
-                alt="1"
+                  alt="Open a position"
+                 title="Open a position"
                 class="img-fluid d-block number"
               />
               <div class="border border-light p-3">
@@ -260,6 +272,7 @@ Pipeline</a>
                 <img
                   src="/images/41.png"
                   alt=" Artificial Intelligence"
+                  title=" Artificial Intelligence"
                   class="img-fluid"
                 />
               </div>
@@ -270,7 +283,8 @@ Pipeline</a>
               <div class="img42 justify-content">
                 <img
                   src="/images/42.png"
-                  alt=" Artificial Intelligence"
+                  alt=" Data Acquisition"
+                  title=" Data Acquisition"
                   class="img-fluid"
                 />
               </div>
@@ -281,7 +295,8 @@ Pipeline</a>
               <div class="justify-content img43">
                 <img
                   src="/images/43.png"
-                  alt=" Artificial Intelligence"
+                  alt=" Data Cleaning Tool"
+                  title=" Data Cleaning Tool"
                   class="img-fluid"
                 />
               </div>
@@ -292,7 +307,8 @@ Pipeline</a>
               <div class="img44 justify-content">
                 <img
                   src="/images/44.png"
-                  alt=" Artificial Intelligence"
+                  alt="MAHDA ML tool"
+                  title="MAHDA ML tool"
                   class="img-fluid"
                 />
               </div>
@@ -302,7 +318,8 @@ Pipeline</a>
               <div class="img45 justify-content">
                 <img
                   src="/images/45.png"
-                  alt=" Artificial Intelligence"
+                 alt=" Backtest Technology"
+                  title=" Backtest Technology"
                   class="img-fluid"
                 />
               </div>
@@ -370,6 +387,7 @@ Pipeline</a>
               <img
                 src="/images/41.png"
                 alt=" Artificial Intelligence"
+                  title=" Artificial Intelligence"
                 class="img-fluid"
               />
             </h3>
@@ -388,7 +406,8 @@ Pipeline</a>
             <h3>
               <img
                 src="/images/42.png"
-                alt=" Artificial Intelligence"
+                 alt=" Data Acquisition"
+                  title=" Data Acquisition"
                 class="img-fluid"
               />
               2. Data Acquisition
@@ -408,7 +427,8 @@ Pipeline</a>
               3. Data Cleaning
               <img
                 src="/images/43.png"
-                alt=" Artificial Intelligence"
+                 alt=" Data Cleaning Tool"
+                  title=" Data Cleaning Tool"
                 class="img-fluid"
               />
             </h3>
@@ -426,7 +446,8 @@ Pipeline</a>
             <h3>
               <img
                 src="/images/44.png"
-                alt=" Artificial Intelligence"
+                  alt="MAHDA ML tool"
+                  title="MAHDA ML tool"
                 class="img-fluid d-inline"
               />
               4. Carbon: MAHDA ML tool
@@ -447,7 +468,8 @@ Pipeline</a>
               5. Backtest Technology
               <img
                 src="/images/45.png"
-                alt=" Artificial Intelligence"
+                alt=" Backtest Technology"
+                  title=" Backtest Technology"
                 class="img-fluid"
               />
             </h3>
@@ -482,7 +504,7 @@ Pipeline</a>
               </p>
             </div>
             <div class="">
-              <img src="/images/51.png" alt="" class="img-fluid img5 p-3" />
+              <img src="/images/51.png" alt="cryptocurrency coins"  title="cryptocurrency coins" class="img-fluid img5 p-3" />
             </div>
           </div>
           <div class="col-md-5">
@@ -555,7 +577,7 @@ Pipeline</a>
           <div class="col-md-4 p-5">
             <div class="row">
               <div class="col-6"><h2>Hard SL & TP </h2></div>
-              <div class="col-6 pb-5"><img src="/images/71.png" alt="" /></div>
+              <div class="col-6 pb-5"><img src="/images/71.png" alt="stoploss and take profit"  title="stoploss and take profit"/></div>
             </div>
             <p>
               According to the history of the coin, the level of volatility of
@@ -567,7 +589,7 @@ Pipeline</a>
             <div class="row">
               <div class="col-6"><h2>Build Risk 
 Free Position </h2></div>
-              <div class="col-6 pb-5"><img src="/images/72.png" alt="" /></div>
+              <div class="col-6 pb-5"><img src="/images/72.png" alt="free risk position" title="free risk position" /></div>
             </div class="p-5">
             <p>
              If the take profit level is touched, 50% of the position will be closed and the stop loss will be moved to the entry point (breakeven). 
@@ -578,7 +600,8 @@ Free Position </h2></div>
             <div class="row">
               <div class="col-6"><h2>Trailing
 Stop Loss  </h2></div>
-              <div class="col-6 "><img src="/images/73.png" alt="" /></div>
+              <div class="col-6 "><img src="/images/73.png" alt="Trailing Stop Loss" title="Trailing Stop Loss" />
+</div>
             </div class="mt-3">
             <p>
              Our artificial intelligence model trails stop loss based on the trend of the coin and the market. In main trends, the trailing stop moves with the market and prevents early exit from the position.
@@ -589,9 +612,9 @@ Stop Loss  </h2></div>
       
     </div>
     <footer class="pt-4">
-      <div class="fot1 text-center">→ Are you ready to invest? </div><div class="text-center mb-3"> Feel free to contact us and we will get back to you as soon as possible.</div>
-       <div class="text-center "><a href="mailto:info@mahda.io">info@mahda.io</a></div> 
-      <div class="social text-center d-flex pb-3 "> <div> <a href=""><i class="soc1 fa-brands fa-linkedin"></i></a> </div> <div> <a href=""><i class=" soc2 fa-brands fa-instagram"></i></a></div></div> 
+      <div class="fot1 text-center px-2">→ Are you ready to invest? </div><div class="text-center mb-3 mx-3"> Feel free to contact us and we will get back to you as soon as possible.</div>
+       <div class="text-center "><a href="mailto:info@mahda.io" target="_blank" title="Email to Mahda">info@mahda.io</a></div> 
+      <div class="social text-center d-flex pb-3 "> <div> <a href="https://www.linkedin.com/company/mahdaio" title="Mahda's linkedin " target="_blank"><i class="soc1 fa-brands fa-linkedin"></i></a> </div> <div> <a href="https://www.instagram.com/mahdaio/" title="Mahda's instagram"><i class=" soc2 fa-brands fa-instagram"></i></a></div></div> 
       <div class=" foottext text-start ps-3">Copyright 2023. All rights reserved.</div>
       </footer>
   </body>
