--- a/index.html
+++ b/index.html
@@ -613,9 +613,9 @@ Stop Loss  </h2></div>
     </div>
     <footer class="pt-4">
       <div class="fot1 text-center px-2">→ Are you ready to invest? </div><div class="text-center mb-3 mx-3"> Feel free to contact us and we will get back to you as soon as possible.</div>
-       <div class="text-center "><a href="mailto:info@mahda.io" target="_blank" title="Email to Mahda">info@mahda.io</a></div> 
-      <div class="social text-center d-flex pb-3 "> <div> <a href="https://www.linkedin.com/company/mahdaio" title="Mahda's linkedin " target="_blank"><i class="soc1 fa-brands fa-linkedin"></i></a> </div> <div> <a href="https://www.instagram.com/mahdaio/" title="Mahda's instagram"><i class=" soc2 fa-brands fa-instagram"></i></a></div></div> 
-      <div class=" foottext text-start ps-3">Copyright 2023. All rights reserved.</div>
+       <div class="text-center "><a href="mailto:info@mahda.io" target="_blank" title="Email to Mahda" class="foota">info@mahda.io</a></div> 
+      <div class="social text-center d-flex pb-3 "> <div> <a href="https://www.linkedin.com/company/mahdaio" title="Mahda's linkedin " target="_blank" class="foota"><i class="soc1 fa-brands fa-linkedin"></i></a> </div> <div> <a href="https://www.instagram.com/mahdaio/" title="Mahda's instagram" class="foota"><i class=" soc2 fa-brands fa-instagram"></i></a></div></div> 
+      <div class=" foottext text-start ps-3">Copyright 2023. All rights reserved. <br> This project was coded by <a href="https://www.linkedin.com/in/azadehfazlolahi" target="_blank" title=" linkedin">Azadeh</a> and it is <a href="https://github.com/azadeh-92/mahdaEN" title="Project's github" target="_blank">open-sourced</a> </div>
       </footer>
   </body>
 </html>
